Fix missing margin for search box in main menu

--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -1616,6 +1616,7 @@ StScrollBar StButton#hhandle:focus {
 }
 
 #menu-search-entry {
+  margin-right: 10px;
   padding: 10px 8px;
   color: rgba(255, 255, 255, 0.7);
   font-size: 10pt;
